fix first stop not showing bug

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -68,6 +68,8 @@
                 user-select: none;
 
                 transition: 0.3s;
+                
+                text-align: center;
 
                 h2 {
                     font-weight: bold;
